@@ -1,0 +1,6 @@
+PREFIX	= ../../..
+
+.PHONY: all
+all: install_headers
+
+include $(PREFIX)/rules.mk
